--- a/index.html
+++ b/index.html
@@ -15,19 +15,40 @@
     <div>
       <h1>Exoplanets</h1>
 
-      NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.
+      <table border="1">
+        <caption>NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Orbiting star</th>
+            <th scope="col">Year of discovery</th>
+            <th scope="col">Distance</th>
+            <th scope="col">Notes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td scope="row">PSR B1257+12 A</td>
+            <td>Lich pulsar</td>
+            <td>1992</td>
+            <td>2300 ly</td>
+            <td>First confirmed exoplanet</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th scope="row">Total</th>
+            <td colspan="4">5</td>
+          </tr>
+        </tfoot>
+      </table>
 
-      Name
-      Orbiting star
-      Year of discovery
-      Distance
-      Notes
 
-      PSR B1257+12 A
-      Lich pulsar
-      1992
-      2300 ly
-      First confirmed exoplanet
+
+
+
+
+
 
       Dimidium
       51 Pegasi
