--- a/index.html
+++ b/index.html
@@ -12,64 +12,66 @@
 <body>
 
   <main class="pad-t-2 pad-b-2 gutter-1-2">
-    <div>
+    <div class="wrapper">
       <h1>Exoplanets</h1>
 
-      <table>
-        <caption>NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Orbiting star</th>
-            <th scope="col">Year of discovery</th>
-            <th scope="col">Distance</th>
-            <th scope="col">Notes</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td scope="row">PSR B1257+12 A</td>
-            <td>Lich pulsar</td>
-            <td>1992</td>
-            <td>2300 ly</td>
-            <td>First confirmed exoplanet</td>
-          </tr>
-          <tr>
-            <td scope="row">Dimidium</td>
-            <td>51 Pegasi</td>
-            <td>1995</td>
-            <td>50 ly</td>
-            <td>First confirmed exoplanet orbiting a main-sequence star</td>
-          </tr>
-          <tr>
-            <td scope="row">Osiris</td>
-            <td>HD 209458</td>
-            <td>2001</td>
-            <td>150 ly</td>
-            <td>First exoplanet with a confirmed atmosphere</td>
-          </tr>
-          <tr>
-            <td scope="row">The Genesis planet</td>
-            <td>PSR B1620-26 & WD B1620-26</td>
-            <td>2003</td>
-            <td>12 400 ly</td>
-            <td>One of the oldest exoplanets yet discovered — ~12.7 B years old</td>
-          </tr>
-          <tr>
-            <td scope="row">Kepler-438b</td>
-            <td>Kepler-438</td>
-            <td>2015</td>
-            <td>470 ly</td>
-            <td>1000th exoplanet discovered</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <th scope="row">Total</th>
-            <td colspan="4">5</td>
-          </tr>
-        </tfoot>
-      </table>
+      <div class="table-wrapper scrollable">
+        <table class="push-0">
+          <caption>NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
+          <thead>
+            <tr>
+              <th class="name" scope="col">Name</th>
+              <th class="star" scope="col">Orbiting star</th>
+              <th class="year" scope="col">Year of discovery</th>
+              <th class="distance" scope="col">Distance</th>
+              <th class="notes" scope="col">Notes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row">PSR B1257+12 A</td>
+              <td>Lich pulsar</td>
+              <td>1992</td>
+              <td>2300 ly</td>
+              <td>First confirmed exoplanet</td>
+            </tr>
+            <tr>
+              <td scope="row">Dimidium</td>
+              <td>51 Pegasi</td>
+              <td>1995</td>
+              <td>50 ly</td>
+              <td>First confirmed exoplanet orbiting a main-sequence star</td>
+            </tr>
+            <tr>
+              <td scope="row">Osiris</td>
+              <td>HD 209458</td>
+              <td>2001</td>
+              <td>150 ly</td>
+              <td>First exoplanet with a confirmed atmosphere</td>
+            </tr>
+            <tr>
+              <td scope="row">The Genesis planet</td>
+              <td>PSR B1620-26 & WD B1620-26</td>
+              <td>2003</td>
+              <td>12 400 ly</td>
+              <td>One of the oldest exoplanets yet discovered — ~12.7 B years old</td>
+            </tr>
+            <tr>
+              <td scope="row">Kepler-438b</td>
+              <td>Kepler-438</td>
+              <td>2015</td>
+              <td>470 ly</td>
+              <td>1000th exoplanet discovered</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <th scope="row">Total</th>
+              <td colspan="4">5</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
 
     </div>
   </main>
